--- a/conf/SingleDownload.conf
+++ b/conf/SingleDownload.conf
@@ -10,7 +10,7 @@ validator v_surname regex ^[A-Za-z ]+$
 validator v_email regex ^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+[.a-zA-Z0-9-]+$
 
 # Note: the v_test must be sanitizied before insert in SQL (base64)
-validator v_test regex ^.*$
+validator v_msg regex ^.*$
 
 #validator v_all regex ^.*$
 
@@ -25,7 +25,7 @@ domain * {
 	       validate name v_name
 	       validate surname v_surname
 	       validate email v_email
-	       validate msg v_text
+	       validate msg v_msg
 	}
 	
 	dynamic ^.*$ serve_asset
