Added mail sending

--- a/conf/build.conf
+++ b/conf/build.conf
@@ -18,7 +18,7 @@ cxxflags=-Wall
 #-Wmissing-declarations -Wshadow -lboost_filesystem
 #cxxflags=-Wpointer-arith -Wcast-qual -Wsign-compare 
 
-ldflags=-lboost_filesystem -lboost_system
+ldflags=-lboost_filesystem -lboost_system -lcurl
 
 # Mime types for assets served via the builtin asset_serve_*
 #mime_add=txt:text/plain; charset=utf-8
